[package]
description = "Provides rendering functionality for Bevy Engine"
edition = "2021"
homepage = "https://bevyengine.org"
keywords = ["bevy"]
license = "MIT OR Apache-2.0"
name = "bevy_render"
repository = "https://github.com/bevyengine/bevy"
version = "0.7.0"

[features]
bmp = ["image/bmp"]
dds = ["ddsfile"]
hdr = ["image/hdr"]
jpeg = ["image/jpeg"]
png = ["image/png"]
tga = ["image/tga"]

# For ktx2 supercompression
zlib = ["flate2"]
zstd = ["ruzstd"]

ci_limits = []
trace = []
tracing-tracy = []
webgl = ["wgpu/webgl"]
wgpu_trace = ["wgpu/trace"]

[dependencies]
# bevy
bevy_app = {path = "../bevy_app", version = "0.7.0"}
bevy_asset = {path = "../bevy_asset", version = "0.7.0"}
bevy_core = {path = "../bevy_core", version = "0.7.0"}
bevy_crevice = {path = "../bevy_crevice", version = "0.7.0", features = ["glam"]}
bevy_derive = {path = "../bevy_derive", version = "0.7.0"}
bevy_ecs = {path = "../bevy_ecs", version = "0.7.0"}
bevy_math = {path = "../bevy_math", version = "0.7.0"}
bevy_reflect = {path = "../bevy_reflect", version = "0.7.0", features = ["bevy"]}
bevy_transform = {path = "../bevy_transform", version = "0.7.0"}
bevy_utils = {path = "../bevy_utils", version = "0.7.0"}
bevy_window = {path = "../bevy_window", version = "0.7.0"}

# rendering
image = {version = "0.23.12", default-features = false}

# misc
anyhow = "1.0" 
bitflags = "1.2.1" 
codespan-reporting = "0.11.0" 
copyless = "0.1.5" 
ddsfile = {version = "0.5.0", optional = true} 
downcast-rs = "1.2.0" 
futures-lite = "1.4.0" 
hex = "0.4.2" 
hexasphere = "7.0.0" 
ktx2 = {version = "0.3.0", optional = true} 
naga = {version = "0.8.0", features = ["glsl-in", "spv-in", "spv-out", "wgsl-in", "wgsl-out"]} 
once_cell = "1.4.1" # TODO: replace once_cell with std equivalent if/when this lands: https://github.com/rust-lang/rfcs/pull/2788
parking_lot = "0.11.0" 
regex = "1.5" 
serde = {version = "1", features = ["derive"]} 
smallvec = {version = "1.6", features = ["union", "const_generics"]} 
thiserror = "1.0" 
wgpu = {version = "0.13.1", features = ["spirv"]} 
# For ktx2 supercompression
flate2 = {version = "1.0.22", optional = true}
ruzstd = {version = "0.2.4", optional = true}
# For transcoding of UASTC/ETC1S universal formats, and for .basis file support
basis-universal = {version = "0.2.0", optional = true}
